Prevent value from dragging left through function
Added a stack of input cards
Show rotation icon as 90 degrees
Instead of "*2", show "x2" but not with the letter "x"
Center icon/text within functions
# 0.00.01 (66490) Aug 1, 2012
Added new prototype for build a function
Finished prototype for function creation
Added stub project for generating templates and mockups